[gd_scene load_steps=22 format=3 uid="uid://bqa1xm7snruxq"]

[ext_resource type="Script" uid="uid://do0dpgfv4oy45" path="res://assets/scripts/enemy/enemy_base.gd" id="1_6k88c"]
[ext_resource type="Script" uid="uid://cjkbvly834ypq" path="res://assets/scripts/characters/character_stats.gd" id="2_88scg"]
[ext_resource type="Shader" uid="uid://d2tfkj0vys23w" path="res://assets/shaders/dissolve.gdshader" id="2_sbtcf"]
[ext_resource type="Texture2D" uid="uid://bwp1o4byq7vvq" path="res://assets/sprites/npcs/crewmate.png" id="4_5v3l4"]
[ext_resource type="Texture2D" uid="uid://bv3d852edjjva" path="res://assets/sprites/effects/dissolve_particle.png" id="5_fnbhu"]
[ext_resource type="Script" uid="uid://dpmgd3hx3ar5y" path="res://addons/godot_state_charts/state_chart.gd" id="6_wi3vu"]
[ext_resource type="Script" uid="uid://d2s1pwit5pfye" path="res://addons/godot_state_charts/parallel_state.gd" id="7_o1ewd"]
[ext_resource type="Script" uid="uid://dv730vr2jnpps" path="res://addons/godot_state_charts/compound_state.gd" id="8_85mkn"]
[ext_resource type="Script" uid="uid://c4jlw4b1jj3pg" path="res://addons/godot_state_charts/atomic_state.gd" id="9_gbevw"]
[ext_resource type="Script" uid="uid://mv5qfbpp3fig" path="res://addons/godot_state_charts/transition.gd" id="10_gc5iu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5u5ll"]
size = Vector2(44, 42)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_snygp"]
noise_type = 3
domain_warp_enabled = true
domain_warp_type = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4fcm6"]
width = 52
height = 37
generate_mipmaps = false
normalize = false
noise = SubResource("FastNoiseLite_snygp")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aaht4"]
resource_local_to_scene = true
shader = ExtResource("2_sbtcf")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_4fcm6")
shader_parameter/noise_tiling = 1.0
shader_parameter/progress = 0.0
shader_parameter/edge_thickness = 0.025
shader_parameter/edge_colour = Color(1, 1, 1, 1)
shader_parameter/texture_size = Vector2(52, 37)

[sub_resource type="Animation" id="Animation_rmlry"]
length = 0.001

[sub_resource type="Animation" id="Animation_k6i2p"]
resource_name = "damaged"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25),
"transitions": PackedFloat32Array(0.277393, 1, 2.73208, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(7, 0), Vector2(-5, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xfn25"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ogkg5"]
_data = {
&"RESET": SubResource("Animation_rmlry"),
&"damaged": SubResource("Animation_k6i2p"),
&"default": SubResource("Animation_xfn25")
}

[sub_resource type="Gradient" id="Gradient_ife2x"]
offsets = PackedFloat32Array(0.565574, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)
metadata/_snap_count = 4

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wj7tl"]
gradient = SubResource("Gradient_ife2x")
width = 3

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hhtr1"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(12, 16, 1)
gravity = Vector3(0, 98, 0)
color_ramp = SubResource("GradientTexture1D_wj7tl")
turbulence_noise_strength = 6.0
turbulence_noise_speed_random = 1.0

[node name="Boss" type="CharacterBody2D" node_paths=PackedStringArray("dissolve_particles") groups=["enemy"]]
z_index = 69
y_sort_enabled = true
collision_layer = 4
collision_mask = 2
motion_mode = 1
script = ExtResource("1_6k88c")
dissolve_particles = NodePath("DissolveParticles")
follow_speed = 120.0
attack_interval = 3.0
movement_switch_interval = 1.0

[node name="CharacterStats" type="Node" parent="."]
script = ExtResource("2_88scg")
max_health = 1000
max_attack = 3
max_defense = 1
health = 1000
attack = 3
defense = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_5u5ll")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_aaht4")
scale = Vector2(2, 2)
texture = ExtResource("4_5v3l4")
hframes = 2
frame = 1
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/sprites/npcs",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/sprites/npcs/crewmate.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "f3f94c579e44a7ddc1c711f9ba07911a"
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ogkg5")
}

[node name="DissolveParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_hhtr1")
texture = ExtResource("5_fnbhu")
one_shot = true
explosiveness = 0.5
randomness = 1.0
fixed_fps = 60

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_wi3vu")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("7_o1ewd")

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("8_85mkn")
initial_state = NodePath("Waiting")

[node name="Orbiting" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_gbevw")

[node name="ToWaiting" type="Node" parent="StateChart/Root/Movement/Orbiting"]
script = ExtResource("10_gc5iu")
to = NodePath("../../Waiting")
event = &"stop_movement"

[node name="ToBlocking" type="Node" parent="StateChart/Root/Movement/Orbiting"]
script = ExtResource("10_gc5iu")
to = NodePath("../../Blocking")
event = &"to_blocking"

[node name="Blocking" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_gbevw")

[node name="ToWaiting" type="Node" parent="StateChart/Root/Movement/Blocking"]
script = ExtResource("10_gc5iu")
to = NodePath("../../Waiting")
event = &"stop_movement"

[node name="ToOrbiting" type="Node" parent="StateChart/Root/Movement/Blocking"]
script = ExtResource("10_gc5iu")
to = NodePath("../../Orbiting")
event = &"to_orbiting"

[node name="Waiting" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_gbevw")

[node name="ToBlocking" type="Node" parent="StateChart/Root/Movement/Waiting"]
script = ExtResource("10_gc5iu")
to = NodePath("../../Blocking")
event = &"to_blocking"

[node name="ToOrbiting" type="Node" parent="StateChart/Root/Movement/Waiting"]
script = ExtResource("10_gc5iu")
to = NodePath("../../Orbiting")
event = &"to_orbiting"

[node name="Attack" type="Node" parent="StateChart/Root"]
script = ExtResource("8_85mkn")
initial_state = NodePath("Waiting")

[node name="Waiting" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("9_gbevw")

[node name="ToAttacking" type="Node" parent="StateChart/Root/Attack/Waiting"]
script = ExtResource("10_gc5iu")
to = NodePath("../../Attacking")
event = &"attack_interval"

[node name="Attacking" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("9_gbevw")

[node name="Waiting" type="Node" parent="StateChart/Root/Attack/Attacking"]
script = ExtResource("10_gc5iu")
to = NodePath("../../Waiting")
event = &"attack_complete"

[connection signal="state_processing" from="StateChart/Root/Movement/Orbiting" to="." method="_on_orbiting_state_processing"]
[connection signal="state_processing" from="StateChart/Root/Movement/Blocking" to="." method="_on_blocking_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Attack/Attacking" to="." method="_on_attacking_state_entered"]
